<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:gravity="fill_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_month"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_income"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txv_outcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_outcome"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_total"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="86dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:gravity="fill_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_day"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txv_incomed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_income"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txv_outcomed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_outcome"
            android:textColor="#000000"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/txv_totald"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_total"
            android:textColor="#000000"
            android:textSize="16dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="#FFC107"
        android:clickable="true"
        android:elevation="6dp"

        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <TextView
        android:id="@+id/txv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:textColor="#FFC107"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>